[view] Added sections for curl examples. Fixed a few [api] issues with incorrect JSON formatting.

--- a/lib/views/home.html
+++ b/lib/views/home.html
@@ -125,7 +125,8 @@
   	radius: 6px; }
 
 </style>
-
-<div id="main" class="grad">
-  {{body}}
-</div>
+<body>
+  <div id="main" class="grad">
+    {{body}}
+  </div>
+</body>
