--- a/lib/views/home.html
+++ b/lib/views/home.html
@@ -123,6 +123,12 @@
   	-webkit-border-radius: 6px;
   	-moz-border-radius: 6px;
   	radius: 6px; }
+   iframe.response {width:100%; height:300px; background-color:white; display:inline-block;}
+   div.form {width:100%; display:table;}
+   div.form div.field {display:table-row; }
+   div.form div.field label {display:table-cell; text-align:right; width:100px; margin-top:3px; mergin-bottom:3px;}
+   div.form div.field input {display:table-cell; width:300px; margin-top:3px; margin-bottom:3px;}
+   div.form div.button {position:relative; left:100px; width:300px; margin-top:3px; margin-bottom:3px;}
 
 </style>
 <body>
