[misc] More partial changes

--- a/lib/views/home.html
+++ b/lib/views/home.html
@@ -146,7 +146,7 @@
     }
 
     .allcontent{
-        display: none;
+        display: block;
     }
 </style>
 
@@ -161,9 +161,9 @@
     {{body}}
   </div>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
 <script type="text/javascript">
-
+/*
 $(function(){
 $('.toggle').click(function(el){
     var tgt = $(el.currentTarget);
@@ -179,6 +179,7 @@ $('.toggle').click(function(el){
 
 });
 });
+*/
 
 
 </script>
